Gather image annotation data
