# jupyterhub_singleuser_profiles/api/swagger.yaml
@@ -61,6 +61,25 @@ paths:
                       type: string
                   - type: string
   
+  /api/images/{image_name}:
+    get:
+      operationId: jupyterhub_singleuser_profiles.api.api.get_image_info
+      summary: Get human readable image information in a json.
+      parameters:
+        - name: image_name
+          in: path
+          required: true
+          description: Name of the image
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+
   /api/images/default:
     get:
       operationId: jupyterhub_singleuser_profiles.api.api.get_default_image
